Closed Bug 1633195 Opened 4 years ago Closed 4 years ago

Find function hits on text across <br> boundary when followed by <strong>

Categories

(Core :: Find Backend, defect)

75 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla77
Tracking Status
firefox-esr68 --- wontfix
firefox75 --- wontfix
firefox76 --- wontfix
firefox77 --- fixed

People

(Reporter: digikata, Assigned: emilio)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files)

Attached file find-bug-example.html

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:75.0) Gecko/20100101 Firefox/75.0

Steps to reproduce:

Searched for a string "CA" for the state on https://www.debian.org/consultants/#US, and found lots of hits on address lines that ended with "C", and a new line starting with a <strong> emphasized "Address"

Actual results:

find for "CA" had lots of hits on address lines that ended with "C", and a new line starting with a <strong> emphasized "Address"

Expected results:

File attached, but searching for "CA"
wordC<br> Address
doesn't get found while
wordC<br> <strong>Address</strong>
does get found.

It seems like at least one is unintended. Probably neither case should be found.

Bugbug thinks this bug should belong to this component, but please revert this change in case of error.

Component: Untriaged → Find Toolbar
Product: Firefox → Toolkit
Status: UNCONFIRMED → NEW
Has Regression Range: --- → yes
Has STR: --- → yes
Component: Find Toolbar → Find Backend
Ever confirmed: true
Keywords: regression
Product: Toolkit → Core
Regressed by: 1457336

Yeah, I think this is a result of those patches, though apparently it used to work mostly by chance. In the <strong> case layout manages to suppress the whitespace that goes in between the <br> and the <strong>.

But this is an issue without that: data:text/html,a<br>b. Anyhow happy to poke at it.

Flags: needinfo?(emilio)
Assignee: nobody → emilio
Flags: needinfo?(emilio)

Wrote this on top of bug 1627643. Should be easy to rebase if needed,
though.

Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/ebb5b2a2d790
Make sure <br> forces a break even if there's no whitespace in between. r=jfkthame
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla77
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: