Bug 1633195 - Make sure <br> forces a break even if there's no whitespace in between. r=jfkthame

Wrote this on top of bug 1627643. Should be easy to rebase if needed,
though.

Differential Revision: https://phabricator.services.mozilla.com/D72541